--- a/src/devtools/client/debugger/src/components/shared/menu.css
+++ b/src/devtools/client/debugger/src/components/shared/menu.css
@@ -2,7 +2,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at <http://mozilla.org/MPL/2.0/>. */
 
-
 /* menuseparator {
   border-bottom: 1px solid #cacdd3;
   width: 100%;
@@ -19,7 +18,6 @@
   height: 100%;
   z-index: 999;
 }
-
 
 .context-menu {
   background: #f2f2f2;
@@ -59,4 +57,8 @@
   height: 1px;
   background-color: #b7b7b7a8;
   margin: 3px 0px;
+}
+
+.menuitem {
+  list-style: none;
 }
