--- a/src/styles.css
+++ b/src/styles.css
@@ -30,10 +30,15 @@ OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
 
-#viewer {
+#app {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+#viewer {
+  position: relative;
+  overflow: hidden;
 }
 
 #graphics {
