--- a/src/devtools/server/actors/highlighters.css
+++ b/src/devtools/server/actors/highlighters.css
@@ -43,14 +43,13 @@
  */
 #highlighter-root .highlighter-container {
   position: absolute;
-  width: 100%;
-  height: 100%;
   /* The container for all highlighters doesn't react to pointer-events by
      default. This is because most highlighters cover the whole viewport but
      don't contain UIs that need to be accessed.
      If your highlighter has UI that needs to be interacted with, add
      'pointer-events:auto;' on its container element. */
   pointer-events: none;
+  transform-origin: top left;
 }
 
 #highlighter-root .highlighter-container.box-model {
