--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   background-color: var(--theme-body-background);
 }
 
+#command-button-pick {
+  margin-top: 8px;
+}
 #command-button-pick::before {
   background: var(--theme-icon-color);
 }
