Move close button to no longer cover watch expressions

--- a/src/devtools/client/debugger/src/components/SecondaryPanes/Expressions.css
+++ b/src/devtools/client/debugger/src/components/SecondaryPanes/Expressions.css
@@ -113,6 +113,7 @@
   position: absolute;
   /* hiding button outside of row until hovered or focused */
   top: -100px;
+  right: 4px;
 }
 
 .expression-container:hover .expression-container__close-btn,
