223 outline ui scroll fixed

--- a/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
+++ b/src/devtools/client/debugger/src/components/PrimaryPanes/Outline.css
@@ -29,14 +29,16 @@
   overflow: hidden;
 }
 
+.outline-list-wrapper {
+  overflow: scroll;
+}
+
 .outline-list {
   margin: 0;
-  padding: 0 0 4px 0;
-  bottom: 25px;
-  left: 0;
-  right: 0;
+  padding: 0;
   list-style-type: none;
   overflow: auto;
+  height: 100%;
 }
 
 .outline-list__class-list {
