--- a/src/styles.css
+++ b/src/styles.css
@@ -125,6 +125,8 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #status {
   padding-left: 10px;
+  color: var(--red-70);
+  font-size: large;
 }
 
 .landing-page-wrapper {
