--- a/src/styles.css
+++ b/src/styles.css
@@ -57,18 +57,18 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 }
 
 #header {
-  background-color: white;
+  background-color: var(--theme-toolbar-background);
+  border-bottom: 1px solid var(--theme-splitter-color);
   height: 28px;
   display: flex;
   align-items: center;
 }
 
 #header .logo {
-  /* mask: url("/src/images/logo.svg"); */
-  background: var(--theme-toolbar-selected-color);
-  height: 14px;
-  width: 124px;
+  height: 17px;
+  width: 24px;
   margin-left: 5px;
+  background-repeat: no-repeat;
 }
 
 .command-button {
