Improve comment rendering

--- a/src/ui/components/Timeline/Timeline.css
+++ b/src/ui/components/Timeline/Timeline.css
@@ -382,6 +382,13 @@
   float: right;
 }
 
+.comment-jump {
+  width: 18px;
+  height: 18px;
+  float: right;
+  transform: scale(0.8);
+}
+
 .comment-input {
   resize: none;
   border: none;
