--- a/src/devtools/client/shared/components/splitter/SplitBox.css
+++ b/src/devtools/client/shared/components/splitter/SplitBox.css
@@ -8,6 +8,7 @@
   min-width: 0;
   height: 100%;
   width: 100%;
+  z-index: 0;
 }
 
 .split-box.vert {
@@ -23,11 +24,13 @@
   flex: 1;
   min-width: 0;
   overflow: auto;
+  z-index: 0;
 }
 
 .split-box > .controlled {
   display: flex;
   overflow: auto;
+  z-index: 0;
 }
 
 .split-box > .splitter {
