--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -5,10 +5,25 @@
   left: 0;
   z-index: 99;
 }
-
 .comments-container {
   position: relative;
   height: 100%;
+}
+
+.comment-marker {
+  width: 10px;
+  height: 10px;
+  bottom: 0.5rem;
+  background-color: #7ed8c8;
+  border-radius: 5px;
+  z-index: 100;
+  position: absolute;
+  border: 1px solid white;
+}
+.comment-marker:hover {
+  transform: scale(1.25);
+  animation-duration: 200ms;
+  cursor: pointer;
 }
 
 .comments .comment {
@@ -19,6 +34,7 @@
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
+  z-index: 101;
 }
 
 .comment-body {
@@ -26,6 +42,7 @@
   flex-direction: row;
   padding: 1rem;
 }
+
 .comment-avatar {
   background: #7ed8c8;
   width: 54px;
