--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -30,7 +30,7 @@
   position: absolute;
   background: white;
   bottom: 1rem;
-  width: 360px;
+  width: 280px;
   border: 1px solid #ccc;
   box-shadow: 0px 3px 4px #eaeaea;
   border-radius: 3px;
@@ -45,8 +45,8 @@
 
 .comment-avatar {
   background: #7ed8c8;
-  width: 54px;
-  height: 54px;
+  width: 44px;
+  height: 44px;
   border-radius: 32px;
   margin: 5px;
   margin: 1rem 1rem 0 0;
@@ -63,26 +63,29 @@
 .comment-content {
   display: flex;
   flex-direction: column;
-}
-.comment-header {
-  display: flex;
-  line-height: 2rem;
-  margin-top: 1rem;
-}
-.comment-user {
-  font-size: 1.5rem;
-  font-weight: bold;
+  width: 100%;
 }
 
-.comment-date {
-  font-size: 1.2rem;
-  color: #757575;
-  margin-left: 9px;
+.comment-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
   line-height: 2rem;
 }
+
 .comment-description {
   font-size: 1.3rem;
   line-height: 2rem;
   color: #737373;
-  margin-top: 1rem;
+}
+
+.comment textarea {
+  width: 100%;
+  height: 120px;
+  border: 1px solid #e9e9e9;
+  padding: 0.5rem;
+  font-family: sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
+  color: #777;
 }
