Add comment seek button

--- a/src/ui/components/Comments/Comments.css
+++ b/src/ui/components/Comments/Comments.css
@@ -86,3 +86,18 @@
   line-height: 1.7rem;
   color: #777;
 }
+
+.comment .actions {
+  display: flex;
+  align-items: center;
+}
+
+.comment-jump {
+  width: 18px;
+  height: 18px;
+  transform: scale(0.8);
+}
+
+.comment-jump:hover {
+  cursor: pointer;
+}
