Fix console dropdown background

--- a/src/devtools/client/themes/variables.css
+++ b/src/devtools/client/themes/variables.css
@@ -187,8 +187,8 @@
   --theme-graphs-full-blue: #00f;
 
   /* Common popup styles(used by HTMLTooltip and autocomplete) */
-  --theme-popup-background: -moz-field;
-  --theme-popup-color: -moz-fieldText;
+  --theme-popup-background: white;
+  --theme-popup-color: var(--grey-70);
   --theme-popup-border-color: ThreeDShadow;
   --theme-popup-dimmed: hsla(0, 0%, 80%, 0.3);
 
