--- a/src/devtools/client/themes/tooltips.css
+++ b/src/devtools/client/themes/tooltips.css
@@ -110,14 +110,7 @@ strong {
       #ccc 75%,
       #ccc
     ),
-    linear-gradient(
-      45deg,
-      #ccc 25%,
-      transparent 25%,
-      transparent 75%,
-      #ccc 75%,
-      #ccc
-    );
+    linear-gradient(45deg, #ccc 25%, transparent 25%, transparent 75%, #ccc 75%, #ccc);
   background-size: 20px 20px;
   background-position: 0 0, 10px 10px;
 }
@@ -262,11 +255,7 @@ strong {
   width: 21px;
   height: 21px;
   margin-left: 4px;
-  background: linear-gradient(
-    -45deg,
-    var(--theme-tooltip-background) 50%,
-    transparent 50%
-  );
+  background: linear-gradient(-45deg, var(--theme-tooltip-background) 50%, transparent 50%);
   border: 0 none;
   pointer-events: all;
 }
@@ -283,8 +272,7 @@ strong {
 
 /* XUL panels have a default border, but pure HTML tooltips don't have one. */
 .tooltip-container[type="arrow"]:not(.tooltip-container-xul) > .tooltip-panel,
-.tooltip-container[type="arrow"]:not(.tooltip-container-xul)
-  > .tooltip-arrow::before {
+.tooltip-container[type="arrow"]:not(.tooltip-container-xul) > .tooltip-arrow::before {
   border: 1px solid var(--theme-arrowpanel-border-color);
 }
 
@@ -306,9 +294,7 @@ strong {
 }
 
 :root[platform="mac"] .tooltip-container[type="doorhanger"] > .tooltip-panel,
-:root[platform="mac"]
-  .tooltip-container[type="doorhanger"]
-  > .tooltip-arrow::before {
+:root[platform="mac"] .tooltip-container[type="doorhanger"] > .tooltip-arrow::before {
   box-shadow: none;
   /*
    * The above should be:
@@ -320,12 +306,8 @@ strong {
    */
 }
 
-:root[platform="mac"].theme-light
-  .tooltip-container[type="doorhanger"]
-  > .tooltip-panel,
-:root[platform="mac"].theme-light
-  .tooltip-container[type="doorhanger"]
-  > .tooltip-arrow::before {
+:root[platform="mac"].theme-light .tooltip-container[type="doorhanger"] > .tooltip-panel,
+:root[platform="mac"].theme-light .tooltip-container[type="doorhanger"] > .tooltip-arrow::before {
   border: none;
 }
 
@@ -426,6 +408,8 @@ strong {
    * easier to click we should be using min-width instead.
    */
   margin-inline-end: 15px;
+  text-align: left;
+  width: 100%;
 }
 
 .tooltip-container[type="doorhanger"]
@@ -435,8 +419,6 @@ strong {
   border: none;
   color: var(--theme-arrowpanel-color);
   background-color: transparent;
-  text-align: start;
-  width: 100%;
 }
 
 .tooltip-container[type="doorhanger"]
@@ -445,9 +427,7 @@ strong {
   background-color: var(--theme-arrowpanel-dimmed);
 }
 
-.tooltip-container[type="doorhanger"]
-  .menuitem
-  > .command:-moz-focusring::-moz-focus-inner {
+.tooltip-container[type="doorhanger"] .menuitem > .command:-moz-focusring::-moz-focus-inner {
   border-color: transparent;
 }
 
@@ -458,9 +438,7 @@ strong {
   box-shadow: 0 1px 0 hsla(210, 4%, 10%, 0.03) inset;
 }
 
-.tooltip-container[type="doorhanger"]
-  .menuitem
-  > .command[aria-checked="true"] {
+.tooltip-container[type="doorhanger"] .menuitem > .command[aria-checked="true"] {
   list-style-image: none;
   -moz-context-properties: fill;
   fill: currentColor;
@@ -472,9 +450,7 @@ strong {
 .tooltip-container[type="doorhanger"]
   .menuitem
   > .command[aria-checked="true"]:-moz-locale-dir(rtl),
-.tooltip-container[type="doorhanger"]
-  .menuitem
-  > .command[aria-checked="true"]:dir(rtl) {
+.tooltip-container[type="doorhanger"] .menuitem > .command[aria-checked="true"]:dir(rtl) {
   background-position-x: right 7px;
 }
 
@@ -484,19 +460,12 @@ strong {
   white-space: nowrap;
 }
 
-.tooltip-container[type="doorhanger"]
-  .checkbox-container
-  .menuitem
-  > .command
-  > .label {
+.tooltip-container[type="doorhanger"] .checkbox-container .menuitem > .command > .label {
   padding-inline-start: 16px;
 }
 
 .menu-button--iconic::before,
-.tooltip-container[type="doorhanger"]
-  .menuitem
-  > .command.iconic
-  > .label::before {
+.tooltip-container[type="doorhanger"] .menuitem > .command.iconic > .label::before {
   content: " ";
   display: inline-block;
   margin-inline-end: 8px;
