--- a/src/ui/components/Header.css
+++ b/src/ui/components/Header.css
@@ -31,3 +31,12 @@
   align-items: center;
   display: flex;
 }
+
+.avatar.first-player {
+  margin-inline-end: 20px;
+}
+
+.avatar:not(.first-player) {
+  margin-left: -8px;
+  box-shadow: 0px 0px 0px 2px white;
+}
