--- a/src/ui/components/Header.css
+++ b/src/ui/components/Header.css
@@ -36,7 +36,7 @@
   margin-inline-end: 20px;
 }
 
-.avatar:not(.first-player) {
+#header .avatar:not(.first-player) {
   margin-left: -8px;
   box-shadow: 0px 0px 0px 2px white;
 }
