--- a/src/ui/components/RisghtSidebar/EventsTimeline.css
+++ b/src/ui/components/RisghtSidebar/EventsTimeline.css
@@ -1,30 +1,21 @@
 .events-timeline {
   background: var(--grey-10);
   border-left: 2px solid var(--grey-20);
-}
-
-.events-timeline.expanded {
-  width: 300px;
   height: 100%;
-  flex-shrink: 0;
   background: var(--grey-10);
   display: flex;
-}
-
-.events-timeline.collapsed .events-timeline-comments {
-  display: none;
+  flex-shrink: 0;
 }
 
 .events-timeline-comments {
   flex-grow: 1;
   overflow: auto;
+  width: 300px;
+  border-left: 2px solid var(--grey-20);
 }
 
 .events-timeline .right-sidebar {
   padding: 8px;
-}
-
-.events-timeline.expanded .right-sidebar {
   border-left: 2px solid var(--grey-20);
 }
 
